--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/ssr": "^18.0.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.14",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -34,12 +36,14 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "angular-cli-ghpages": "^2.0.1",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.47",
     "typescript": "~5.4.2"
   }
 }
